fixed header a bit, caret still out of place

--- a/upod/app/assets/stylesheets/style.scss
+++ b/upod/app/assets/stylesheets/style.scss
@@ -1,6 +1,5 @@
 /*MegaMenu*/
 .navbar-nav>li>.dropdown-menu {
-    margin-top:20px;
     border-top-left-radius:4px;
     border-top-right-radius:4px;
 		background-color: $navbar-inverse-bg;
